[tool.poetry]
name = "LOLComicGrabber"
version = "0.0.5"
description = ""
authors = ["Shahriyar Shawon <ShahriyarShawon321@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.27.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lcg = "lolcomicgrabber.__main__:main"